eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplebank-api-deploment
  labels:
    app: simplebank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simplebank-api
  template:
    metadata:
      labels:
        app: simplebank-api
    spec:
      containers:
        - name: simplebank-api
          image: 433292532005.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
