eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: nginx
  rules:
  - host: "api-sb.crew0.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: simplebank-api-service
              port:
                number: 80
  - host: "crew0.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: simplebank-api-service
              port:
                number: 80
  tls:
  - hosts:
    - api-sb.crew0.com
    - api.crew0.com
    - crew0.com
    secretName: api-crew0-cert
